--- a/dev/css/menu.css
+++ b/dev/css/menu.css
@@ -40,6 +40,10 @@
 
 .navbar-menu-open {
 
+    .menu-navbar {
+        border-radius: 1rem;
+    }
+
     .navbar {
         background-color: var(--base-color-brand--eerie-black);
         border-color: var(--base-color-brand--eerie-black);
